syntax = "proto3";

package profile_to_enroll;

message GetInstructorExperienceRequest {
  string instructor_id = 1;
  string date_from = 2;
  string date_to = 3;
}

message InstructorExperience {
  optional string dance_category_name = 1;
  optional string advancement_level_name = 2;
  float spent_hours = 3;
}

message GetInstructorExperienceResponse {
  repeated InstructorExperience instructor_experience = 1;
}